[package]
name = "matfile"
version = "0.4.0" # remember to update html_root_url
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2018"

categories = ["parser-implementations"]
description = "Matfile is a library for reading and writing Matlab \".mat\" data files."
exclude = ["tests/*", "src/bin/*"]
keywords = ["matlab", "mat", "file", "reader", "writer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dthul/matfile"

[features]
ndarray = ["ndarr", "num-complex"]

[dependencies]
enum-primitive-derive = "0.3"
libflate = "2.0"
nom = "7"
num-traits = "0.2"
ndarr = { version = "0.15", package = "ndarray", optional = true }
num-complex = { version = "0.4", optional = true }

[package.metadata.docs.rs]
all-features = true