[package]
name = "matfile-ndarray"
version = "0.2.0" # remember to update html_root_url
authors = ["Daniel Thul <daniel.thul@gmail.com>"]
edition = "2018"

description = "Utility library to convert between matfile and ndarray array formats"
exclude = ["tests/*", "src/bin/*"]
keywords = ["matlab", "matfile", "array", "ndarray", "convert"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dthul/matfile"

[dependencies]
matfile = { version = "0.2", path = ".." }
ndarray = "0.13"
num-complex = "0.2"
